--- a/test1/biaobai.html
+++ b/test1/biaobai.html
@@ -5,13 +5,9 @@
     <title>可可托海的牧羊人</title>
     <style>
         body{
-
             background-image: url("./images/0.jpg");
             background-size: 100%;
             height: 100%;
-
-
-
         }
         html{
             height: 100%;
@@ -46,7 +42,7 @@
     </style>
 </head>
 <body>
-<audio src="./music/part.mp3" loop="loop" autoplay="autoplay">
+<audio src="music/part.mp3" loop="loop" autoplay="autoplay" controls="controls">
 </audio>
 <p id="one">心上人</p>
 <p id="two">我在可可托海等你</p>
