--- a/test1/biaobai.html
+++ b/test1/biaobai.html
@@ -42,7 +42,7 @@
     </style>
 </head>
 <body>
-<audio src="music/part.mp3" loop="loop" autoplay="autoplay" controls="controls">
+<audio src="music/part.mp3" loop="loop" autoplay="autoplay">
 </audio>
 <p id="one">心上人</p>
 <p id="two">我在可可托海等你</p>
